--- a/Lab-1 - RTL Synthesis/report/content/title_page.tex
+++ b/Lab-1 - RTL Synthesis/report/content/title_page.tex
@@ -14,7 +14,7 @@
 %	TITLE SECTION
 %------------------------------------------------------------------------------------
 \textbf{\Huge Laboratory Experiment 1 \\RTL Synthesis }\\[0.2cm]
-\textbf{\Large Laboratory Report}\\[5cm]
+\textbf{\Large Laboratory Report}\\[3cm]
 
 
 %----------------------------------------------------------------------------------------
@@ -26,8 +26,28 @@
 
 \textbf{\large Submitted by}\\[0.5cm]
 
-{\large Thalagala B.P.}	\hspace{5mm} {\large 180631J }\\[1cm]
+\textbf{\large Submitted by}\\[2mm]
+\begin{minipage}{0.3\textwidth}
+	\begin{flushleft}
+		{\large C.S.Pallikkonda}\\[2mm]
+		{\large R.M.A.S.Rathnayake }\\[2mm]
+		{\large B.P.Thalagala }\\[2mm]		
+		
+	\end{flushleft}
+\end{minipage}
+\hspace{2mm}
+\begin{minipage}{0.2\textwidth}
+	\begin{flushright}
+		{\large 180441C }\\[2mm]
+		{\large 180534N }\\[2mm]
+		{\large 180631J }\\[2mm]
 
+	\end{flushright}
+\end{minipage}\\[1cm]
+
+	
+	
+	
 %----------------------------------------------------------------------------------------
 %	DATE SECTION
 %----------------------------------------------------------------------------------------
