--- a/Lab-3 -  Place & Route/report/settings/packages.tex
+++ b/Lab-3 -  Place & Route/report/settings/packages.tex
@@ -34,7 +34,7 @@
 
 \usepackage{algpseudocode}
 \usepackage{float}
-\usepackage{minted}
+%\usepackage{minted}
 \usepackage{tcolorbox}
 \usepackage{menukeys}
 \usepackage[
@@ -42,3 +42,10 @@ width=.8\textwidth,
 justification=centering]{caption}
 \usepackage{xcolor}
 \usepackage{pstricks}
+\usepackage{acronym}
+\usepackage{fancyvrb}
+\usepackage[
+width=\textwidth,
+font=footnotesize,
+justification=centering]{caption}
+\usepackage{tabularx}
